# safeguard-node

./: .gitignore  CMakeLists.txt  README.md  prj.conf
docs/: diagramas.md  dominio.md  glossario.md  indice.md  manual_execucao.md  roteiro_proposta_e_implementacao.md
docs/adr/: ADR-001-zephyr-rtos.md  ADR-002-spi-bare-metal.md  ADR-003-zbus-pubsub.md  ADR-004-aritmetica-inteira.md  ADR-005-nvs-settings.md  ADR-006-emulacao-mps2-an385.md
src/: main.c  proc.c
src/actuators/: buzzer.c  led.c
src/bus/: zbus_channels.c  zbus_channels.h
src/logic/: proc.c  proc.h
src/sensor/: adxl345.c
src/settings/: settings_nvs.c  settings_nvs.h
src/shell/: shell_cmd.c
tests/logic/: CMakeLists.txt  prj.conf
tests/logic/src/: test_proc.c
